 * You can now always look at remote objects whose descs are not set nearby,
   and can never look at remote objects with nearby descs. [MG]
 * The chatdb didn't load correctly with invalid objects on channels. [MG]
 * Fixed a crashbug in @boot on Windows. Reported by Daniel Powell. [MG]
 * %q-registers did not carry over into @includes correctly. Reported by
   Reaver. [MG]


Version 1.8.4 patchlevel 0                                 May 09,  2010

Major Changes:
 * Commands can now be restricted with an @lock-style lock in restrict.cnf
   and @command/restrict, allowing more complex restrictions. [MG]

Minor Changes:
 * @shutdown/reboot logs who was responsible. Suggested by Kitai. [SW]
 * Rewrite of help @lock to improve clarity, by Sketch.
 * New NO_LOG flag to disable command logging on a per-object basis.
   Based on code by Teal. [SW]
 * mindb+maxdb classes for lsearch/@search no longer reset to default
   values when > db_top or < 0 is given: Instead treated as an integer
   comparison. [GM]
 * @open can now open exits in remote locations, as well as your current
   location. Suggested by Bane. [MG]
 * New OPEN_OK flag allows anyone to open exits in a room, and @lock/open
   to restrict who can. Based on patch by ranmir@M*U*S*H. [MG]
 * Master Room exits and ZMR exits now run the "goto" command, and @ealias
   and @lalias run the "enter"/"leave" commands, so @hooks get run, command
   restrictions checked, etc. [MG]
 * New @lock/from and @lock/receive locks, to control who can give to an
   object, and what objects can be given to them, respectively. From a 
   suggestion by Nammyung@M*U*S*H, based on locks on ElendorMUSH. [MG]
 * Changed the restrictions for valid @function names to match what was
   reported by valid(). [MG]

Commands:
 * New @include <obj>/<attr> command, which inserts <attr> into the current
   action list. Patch by Javelin.
 * @scan can now take multiple switches at the same time. [MG]