@@ -261,7 +261,7 @@ For more, see Entries-13
  @search3                  @search4                  @search5                 
  @select                   @set                      @sex                     
  @shutdown                 @sitelock                 @sitelock2               
- @sitelock3                @speechformat             @sql                     
+ @sitelock3                @speechmod                @sql                     
  @squota                   @startup                  @stats                   
  @success                  @sweep                    @switch                  
  @switch2                  @teleport                 @tport                   
